# libmime

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
mime/: mime.cpp  mime.h  mime_impl.cpp  mime_impl.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  main.cpp
